# ordo-ai

./: .bandit  .commitlintrc.yaml  .devcontainer  .env.example  .gitignore  .pre-commit-config.yaml  DEVELOPER_GUIDE.md  Dockerfile  Dockerfile.chainlit  Makefile  README.md  alembic.ini  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt  run-tests.ps1  switch-env.ps1
.github/: dependabot.yml  dependency-review-config.yml
.github/workflows/: baseline-ci.yml  branch-protection-validator.yml  dependency-scan.yml  full-pipelane-ci.yml  lint-and-test.yml  pr-title-validator.yml  publish-docker.yml  release.yml  security-gate.yml  semantic-release.yml  weekly-audit.yml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
dev/bench/: data.js
diagrams/: Human Gate Governance Flow.mmd
docs/: BRANCH_PROTECTION_SETUP.md
examples/: phase_5_usage.py
grafana/dashboards/: dashboards.yml
migrations/: __init__.py  env.py
migrations/versions/: 001_initial_schema.py
scripts/: health_check.py  health_check.sh  init_db.sh  init_db.sql  run_migrations.sh  static_analysis.py  validate_env.py
src/: __init__.py  config.py  exceptions.py  main.py
src/agents/: __init__.py  base_agent.py
src/agents/tier_0/: __init__.py  deviation_handler.py
src/agents/tier_1/: __init__.py  requirements_strategy.py  solution_architect.py  strategy_validator.py
src/agents/tier_2/: __init__.py  dependency_resolver.py  implementation_planner.py  infrastructure_setup.py  observability.py
src/agents/tier_3/: __init__.py  quality_engineer.py  software_engineer.py  static_analysis.py
src/agents/tier_4/: __init__.py  product_validator.py  security_validator.py
src/agents/tier_5/: __init__.py  commit_agent.py  deployment.py  documentation.py
src/api/: __init__.py  health.py  schemas.py  workflows.py
src/auth/: __init__.py  jwt_handler.py  rbac.py
src/chainlit_app/: __init__.py  app.py  callbacks.py
src/llm/: __init__.py  base_client.py  google_client.py  openrouter_client.py
src/observability/: __init__.py  logging.py  metrics.py
src/orchestration/: __init__.py  budget_guard.py  checkpoints.py  controller.py  state.py
src/storage/: __init__.py  artifact_storage.py  cache.py  checkpoint_repository.py
tests/: conftest.py
tests/api/: conftest.py  test_api_endpoints.py  test_health_comprehensive.py  test_workflows_comprehensive.py
tests/e2e/: __init__.py  test_full_workflow.py
tests/integration/: test_checkpoint_manager.py  test_commit_agent_extended.py  test_controller_extended.py  test_orchestration_components.py  test_orchestration_controller.py  test_orchestration_controller_comprehensive.py  test_tier_4_integration.py
tests/mocks/: __init__.py  mock_agents.py
tests/performance/: __init__.py  test_benchmarks.py
tests/security/: authentication.py
tests/unit/: test_artifact_storage.py  test_async_smoke.py  test_base_agent.py  test_budget_guard.py  test_budget_guard_additional.py  test_budget_guard_extended.py  test_cache.py  test_chainlit_app.py  test_chainlit_app_extended.py  test_chainlit_app_unblocked.py  test_chainlit_callbacks_extended.py  test_chainlit_callbacks_unblocked.py  test_checkpoint_manager.py  test_checkpoint_repository.py  test_commit_agent.py  test_commit_agent_additional.py  test_config.py  test_dependency_resolver.py  test_deployment.py  test_deviation_handler.py  test_deviation_handler_additional.py  test_documentation.py  test_documentation_comprehensive.py  test_exceptions.py  test_google_client.py  test_health_extended.py  test_implementation_planner.py  test_infrastructure_setup.py  test_jwt_handler_extended.py  test_llm_base_client.py  test_logging.py  test_main.py  test_metrics.py  test_observability.py  test_openrouter_client.py  test_orchestration_controller.py  test_product_validator.py  test_quality_engineer.py  test_quality_engineer_additional.py  test_quality_engineer_extended.py  (+8 more)
