[project]
name = "multi-tier-agent-ecosystem"
version = "1.0.0-alpha.4"
description = "A production-ready, LangGraph-native multi-agent system for automated software development lifecycle"
authors = [
    {name = "Harman"}
]
license = "MIT"
requires-python = ">=3.12,<3.13"
dynamic = ["dependencies"]

[tool.poetry]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"  # Force Python 3.12.x only (LangGraph compatibility)

# Core Orchestration (LangGraph Stack)
langgraph = "^0.4.0"
langgraph-checkpoint = "^3.0.0"  # Security fix for CVE-2025-64439
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-google-genai = "^2.0.0"

# Backend Framework
fastapi = "^0.120.0"  # Upgraded for Starlette 0.49.1 compatibility
starlette = "^0.49.1"  # Security fix for GHSA-7f5h-v6xp-fcq8
uvicorn = {extras = ["standard"], version = "^0.35.0"}  # Upgraded for Chainlit 2.9.4+
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"

# Frontend UI
chainlit = "^2.9.4"  # Upgraded for patched SSRF fix and Pydantic 2.10+ compatibility

# Database & Storage
asyncpg = "^0.30.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
redis = {extras = ["hiredis"], version = "^5.2.0"}
minio = "^7.2.0"

# Authentication & Security
pyjwt = "^2.10.0"
cryptography = "^44.0.0"
python-multipart = "^0.0.22"  # Patched for GHSA-wp53-j4wj-2cfg

# Observability
structlog = "^24.4.0"
prometheus-client = "^0.21.0"
protobuf = "^6.33.5"  # Security fix for CVE-2026-0994

# Utilities
python-dotenv = "^1.0.1"
aiofiles = ">=23.1.0,<24.0.0"  # Pinned by chainlit dependency
httpx = "^0.28.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
pytest-rerunfailures = "^14.0.0"
freezegun = "^1.5.1"

# Code Quality
black = "^24.10.0"
ruff = "^0.8.0"
mypy = "^1.13.0"
radon = "^5.1.0"
pre-commit = "^4.0.0"

# Security Scanning
pip = "^26.0"  # Security fix for CVE-2026-1703
pip-audit = "^2.7.0"
safety = "^3.3.0"
types-aiofiles = "^25.1.0.20251011"
bandit = "^1.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



# ============================================================================
# CODE QUALITY TOOL CONFIGURATIONS
# ============================================================================

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "archived",
    "examples",
    "scripts",
    "debug_imports.py",
    "debug_regex.py",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "ANN", # flake8-annotations (Strict typing)
    "S",   # flake8-bandit (Security)
    "A",   # flake8-builtins
    "COM", # flake8-commas
    "DTZ", # flake8-datetimez
    "T20", # flake8-print
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "RUF", # Ruff-specific rules
]

ignore = [
    "E501",    # Line length (Leave this to Black, it handles it better)
    "B008",    # Allow function calls in default args (REQUIRED for FastAPI Depends)
    "COM812",  # Trailing comma missing (Conflicts with Black formatter)
    "ISC001",  # Implicit string concatenation (Conflicts with Black formatter)
    "ANN101",  # Deprecated: Missing type annotation for self
    "ANN102",  # Deprecated: Missing type annotation for cls
    "ANN401",  # Allow 'Any' type hints (Necessary for some dynamic Python patterns)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Allow 'assert' (Standard for Pytest)
    "S105",    # Allow hardcoded passwords (fake keys for testing)
    "S106",    # Allow hardcoded passwords (fake keys for testing)
    "ANN",     # Tests don't need strict type return annotations
    "ARG",     # Allow unused arguments (Standard for Pytest fixtures)
    "E402",    # Allow imports not at top (Standard for mocking)
]
"__init__.py" = ["F401"]  # Allow unused imports in package initialization

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-single-line = false
lines-after-imports = 2
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_concatenate = true

# Allow some flexibility
allow_subclassing_any = true
allow_untyped_calls = false
allow_untyped_decorators = true

# Third-party packages without stubs
[[tool.mypy.overrides]]
module = [
    "chainlit.*",
    "minio.*",
    "langgraph.*",
    "langchain.*",
    "prometheus_client.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
pythonpath = ["."]


markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/site-packages/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# ============================================================================
# SECURITY SCANNING CONFIGURATION
# ============================================================================

[tool.bandit]
# Skip B608 (hardcoded SQL expressions) as this project uses f-strings for LLM prompts, not SQL
skips = ["B608"]

# ============================================================================
# RELEASE AUTOMATION CONFIGURATION (Tag-Only Strategy)
# ============================================================================

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/__init__.py:__version__"]

# --- PLATINUM FIX: DISABLE COMMITS TO PREVENT CONFLICTS ---
commit = false                   # Do not push changes to pyproject.toml/CHANGELOG
tag = true                       # Create a Git Tag (this is our version of truth)
push = true                      # Push the tag to GitHub
# ----------------------------------------------------------

upload_to_pypi = false           # We use Docker/GHCR instead of PyPI
upload_to_release = true
build_command = "pip install poetry && poetry build"

# ------------------------------------------------------------------
# 🌳 THREE-TIER PROMOTION STRATEGY (Alpha → Beta → Production)
# ------------------------------------------------------------------

# Tier 1: Main (Production) -> v1.0.0
[tool.semantic_release.branches.main]
match = "main"
prerelease = false

# Tier 2: Staging (Beta) -> v1.0.0-beta.1
[tool.semantic_release.branches.staging]
match = "staging"
prerelease = true
prerelease_token = "beta"

# Tier 3: Develop (Alpha) -> v1.0.0-alpha.1
[tool.semantic_release.branches.develop]
match = "develop"
prerelease = true
prerelease_token = "alpha"

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    "chore(release):",
    "chore(deps):",
    "ci:",
]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"